kube/dpl-userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: dpl-userprofile
  name: dpl-userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dpl-userprofile
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dpl-userprofile
    spec:
      containers:
      - image: registryawm8866.azurecr.io/tripinsights/userprofile:1.0
        name: userprofile
        resources: {}
status: {}
