kube/poi.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: poi
  name: poi
spec:
  containers:
  - image: registryawm8866.azurecr.io/tripinsights/poi:1.0
    name: poi
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
