kube/testpod.yaml

---
apiVersion: v1
kind: Pod
metadata:
  name: demo
  labels:
    aadpodidbinding: team4-pod-id
spec:
  containers:
  - name: demo
    image: mcr.microsoft.com/oss/azure/aad-pod-identity/demo:v1.6.3
    args:
      - --subscriptionid=5c4143e9-82e3-49f2-86fb-a23f57ee87f5
      - --clientid=88c520a2-0e92-4d0d-a6bb-14da655cd8a8
      - --resourcegroup=kube-cluster2
  nodeSelector:
    kubernetes.io/os: linux
