kube/trips.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: trips
  name: trips
spec:
  containers:
  - image: registryawm8866.azurecr.io/tripinsights/trips:1.0
    name: trips
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: trips
spec:
  ports:
  - port: 80
  selector:
    app: trips
