kube/user-java.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: user-java
  name: user-java
  namespace: apidev
spec:
  containers:
  - image: registryawm8866.azurecr.io/tripinsights/user-java:1.0
    name: user-java
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: apidev
spec:
  ports:
  - port: 80
  selector:
    app: user-java
