kube/userprofile.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: userprofile
    aadpodidbinding: team4-pod-id
  name: userprofile
  namespace: apidev
spec:
  hostname: userprofile
  containers:
  - image: registryawm8866.azurecr.io/tripinsights/userprofile:1.0
    name: userprofile
    volumeMounts:
      - name: secrets-store01-inline
        mountPath: "/secrets"
        readOnly: true
    resources: {}
  restartPolicy: Always
  volumes:
    - name: secrets-store01-inline
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: "azkv-team4"
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: apidev
spec:
  ports:
  - port: 80
  selector:
    app: userprofile
