kube/ingress-apidev-default-hc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apidev-default-hc-agic
  namespace: apidev
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /api/trips
        backend:
          service:
            name: trips
            port:
              number: 80
        pathType: Prefix
      - path: /api/trips/healthcheck
        backend:
          service:
            name: trips
            port:
              number: 80
        pathType: Prefix
      - path: /api/poi
        backend:
          service:
            name: poi
            port:
              number: 80
        pathType: Prefix
      - path: /api/poi/healthcheck
        backend:
          service:
            name: poi
            port:
              number: 80
        pathType: Prefix
