kube/ingress-tripviewer-only-ns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer-agic
  namespace: webdev
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: tripviewer
            port:
              number: 80
        pathType: Prefix
