kube/ingress-tripviewer-plus-ns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer-agic
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: tripviewer.webdev
            port:
              number: 80
        pathType: Prefix
      - path: /api/trips
        backend:
          service:
            name: trips.apidev
            port:
              number: 80
        pathType: Prefix
      - path: /api/trips/healthcheck
        backend:
          service:
            name: trips.apidev
            port:
              number: 80
        pathType: Prefix
      - path: /api/poi
        backend:
          service:
            name: poi.apidev
            port:
              number: 80
        pathType: Prefix
      - path: /api/poi/healthcheck
        backend:
          service:
            name: poi.apidev
            port:
              number: 80
        pathType: Prefix
