kube/ingress-userprofile.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userprofile-agic
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-path: "/api/user/healthcheck"
spec:
  rules:
  - http:
      paths:
      - path: /api/user
        backend:
          service:
            name: userprofile
            port:
              number: 80
        pathType: Prefix
      - path: /api/user/healthcheck
        backend:
          service:
            name: userprofile
            port:
              number: 80
        pathType: Prefix
