kube/tripviewer-plus-agic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer-agic
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: tripviewer
            port:
              number: 80
        pathType: Exact
      - path: /api/trips
        backend:
          service:
            name: trips
            port:
              number: 80
        pathType: Exact
      - path: /api/poi
        backend:
          service:
            name: poi
            port:
              number: 80
        pathType: Exact
